src/snapshots/fec_receipt__tests__F7N_1919346.snap
---
source: src/tests.rs
expression: "preview::text(&receipt, false)"
---
  +--------------------------------+
  |================================|
2x|          F O R M   7           |
  |      Communication Costs       |
  |          FEC-1919346           |
  |================================|
2x|NATIONAL RIFLE ASSOCIATION      |
2x|INSTITUTE FOR LEGISLATIVE ACTION|
  |C70000716                       |
  |--------------------------------|
  |Report  Q3 - October Quarterly  |
  |Period  Jul 1 - Sep 30, 2025    |
  |--------------------------------|
  |Signed  JOHN COMMERFORD         |
  |        Oct 9, 2025             |
  |                                |
  |                                |
  |                                |
  |       [ image 384x148 ]        |
  |                                |
  |                                |
  | scan for the filing on fec.gov |
  |                                |
  |                                |
  |                                |
  |                                |
  +--------------------------------+
